# Mqvi

./: .ebignore  .env.example  .gitignore  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  README.tr.md  build.ps1  development-plan (1).md  docker-compose.yml  entitlements.mac.plist  livekit.yaml  package-lock.json  package.json  remainings.md  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  test.yml
client/: .gitignore  Dockerfile  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/android/: build.gradle  capacitor.settings.gradle  gradle.properties
client/android/app/: build.gradle  capacitor.build.gradle
client/ios/MqviBroadcast/: Info.plist
client/public/: pcm-feeder-processor.js  pcm-worklet-processor.js
client/src/: App.tsx  main.tsx
client/src/api/: admin.ts  auth.ts  badges.ts  block.ts  calls.test.ts  calls.ts  channelPermissions.ts  channels.ts  client.ts  discovery.ts  dm.ts  e2ee.ts  feedback.ts  friends.ts  gif.ts  invites.ts  joinRequests.ts  linkPreview.ts  members.ts  messages.ts  pins.ts  preferences.ts  profile.ts  push.ts  reactions.ts  readState.ts  report.ts  requestBody.test.ts  roles.ts  search.ts  server.ts  servers.ts  soundboard.ts  stats.ts  uploadRequest.test.ts  voice.ts  voiceMessages.ts
client/src/crypto/: types.ts  (+10 more)
deploy/: .env.example  build.ps1  coturn-setup.sh  install.sh  livekit-setup.ps1  livekit-setup.sh  livekit.yaml  redeploy.example.ps1  redeploy.example.sh  start.sh
deploy/package/: start.sh
electron/: gameDetect.test.ts  gameDetect.ts  main.ts  preload.ts  tsconfig.json
native/: audio-capture.cpp  build.bat  game-probe.cpp  games-list.json
native/game-capture/: Cargo.toml  README.md
native/game-capture/.cargo/: config.toml
native/game-capture/src/: capture.rs  lib.rs  main.rs  mf_encoder.rs  nv12.rs
native/game-capture/viewer/: .gitignore  index.html
release-notes/: v2.18.0.md  v2.19.0.md  v2.19.1.md  v2.20.0.md  v2.21.0.md  v2.22.0.md
server/: Dockerfile  go.mod  go.sum  health.go  health_test.go  init_callbacks.go  init_handlers.go  init_repos.go  init_routes.go  init_services.go  main.go  main_test.go
server/config/: applinks_test.go  config.go  knobs_test.go
server/database/: database.go  embed.go  migration_smoke_test.go  tx.go
server/handlers/: admin.go  applinks.go  applinks_test.go  auth.go  avatar.go  badge.go  block.go  category.go  channel.go  channel_mute.go  channel_permission.go  device.go  discovery.go  dm.go  dm_settings.go  download_prompt.go  e2ee.go  feedback.go  friendship.go  gif.go  invite.go  link_preview.go  livekit_webhook.go  member.go  message.go  pin.go  preferences.go  reaction.go  read_state.go  report.go  role.go  search.go  server.go  server_mute.go  soundboard.go  stats.go  storage.go  upload_limits.go  voice.go  voice_test.go
server/middleware/: auth.go  permission.go  platform_admin.go  server_membership.go
server/models/: admin.go  app_log.go  badge.go  ban.go  channel.go  channel_mute.go  channel_permission.go  device.go  discovery.go  dm.go  dm_settings.go  e2ee.go  feedback.go  friendship.go  invite.go  join_request.go  link_preview.go  livekit_instance.go  livekit_metrics.go  member.go  message.go  message_validation_test.go  metrics_history.go  p2p_call.go  password_reset.go  pin.go  preferences.go  push_token.go  reaction.go  read_state.go  report.go  role.go  role_request.go  role_test.go  server.go  server_list_item_test.go  server_member.go  server_mute.go  session.go  soundboard.go  (+4 more)
server/pkg/: errors.go  errors_test.go  response.go  response_test.go
server/repository/: app_log_repository.go  attachment_repository.go  badge_repository.go  ban_repository.go  category_repository.go  channel_mute_repository.go  channel_permission_repository.go  channel_repository.go  device_repository.go  discovery_repository.go  dm_repository.go  dm_settings_repository.go  e2ee_backup_repository.go  feedback_repository.go  friendship_repository.go  group_session_repository.go  invite_repository.go  join_request_repository.go  link_preview_repository.go  livekit_repository.go  mention_repository.go  message_repository.go  metrics_history_repository.go  pin_repository.go  preferences_repository.go  reaction_repository.go  read_state_repository.go  report_repository.go  reset_token_repository.go  role_mention_repository.go  role_repository.go  search_repository.go  server_mute_repository.go  server_report_repository.go  server_repository.go  session_repository.go  soundboard_repository.go  sqlite_admin_filter_test.go  sqlite_app_log.go  sqlite_attachment.go  (+52 more)
server/services/: admin_server_service.go  admin_user_service.go  app_log_service.go  auth_service.go  auth_service_test.go  badge_service.go  block_service.go  category_service.go  channel_mute_service.go  channel_permission_service.go  channel_permission_service_test.go  channel_service.go  cleanup_orphan_test.go  cleanup_service.go  cross_server_ownership_test.go  device_service.go  discovery_service.go  dm_channel.go  dm_encryption_policy_test.go  dm_extras.go  dm_markread_test.go  dm_message.go  dm_request.go  dm_service.go  dm_settings_service.go  dm_upload_service.go  e2ee_service.go  egress_signing_test.go  encryption_policy_test.go  feedback_service.go  feedback_upload_service.go  feedback_upload_service_test.go  file_cleanup_service.go  file_url_signer.go  friendship_service.go  idor_test.go  invite_service.go  link_preview_service.go  livekit_admin_service.go  member_service.go  (+43 more)
server/static/: static.go
server/testutil/: mocks.go
server/ws/: client.go  client_ordering_test.go  client_race_test.go  client_ratelimit_test.go  event.go  focus_test.go  handler.go  hub.go  ready_payload_test.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  lib.rs  main.rs
(+484 files in other folders)
