[package]
name = "mqvi"
version = "0.1.0"
description = "mqvi — Self-hosted communication platform"
authors = ["akinalp"]
edition = "2021"

[lib]
name = "mqvi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
