[package]
name = "mqvi-game-capture"
version = "0.1.0"
edition = "2021"
description = "Native WGC+NVENC game capture, published to LiveKit with E2EE (NGC spike)."
publish = false

[lib]
name = "mqvi_game_capture"
path = "src/lib.rs"

[[bin]]
name = "mqvi-game-capture"
path = "src/main.rs"

[[bin]]
name = "test-encode"
path = "src/bin/test_encode.rs"

[dependencies]
# native (default) feature pulls libwebrtc → gives us the FrameCryptor E2EE that is
# format-compatible with our JS clients' ExternalE2EEKeyProvider. rustls avoids an
# OpenSSL dependency on Windows MSVC.
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"

# Windows Media Foundation for vendor-agnostic hardware video encode (NVENC/AMF/QSV via MFT).
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
]

[[bin]]
name = "probe-encoders"
path = "src/bin/probe_encoders.rs"
